atualização estilo seções

--- a/simpliflic-main.html
+++ b/simpliflic-main.html
@@ -8,7 +8,7 @@
   <title>Simpliflic</title>
   <link rel="stylesheet" href="css/estilos.css" />
   <script>
-    setInterval(() => location.reload(), 3000); // Atualiza a cada 3 segundos
+    //setInterval(() => location.reload(), 3000); // Atualiza a cada 3 segundos
   </script>
 </head>
 
@@ -76,13 +76,14 @@
         </p>
 
         <p>
-          Nosso trabalho é facilitar seu entendimento sobre as piruetas da vida, afinal, a vida de cabeça para baixo é muito mais divertida
+          Nosso trabalho é facilitar seu entendimento sobre as piruetas da vida, afinal, a vida de cabeça para baixo é
+          muito mais divertida
         </p>
 
       </div>
     </section>
 
-    <section id="quem-somos" class="secao">
+    <section id="quem-somos" class="secao secao-quem-somos">
 
       <div class="container-quem-somos">
         <div class="titulo-quem-somos">
@@ -93,67 +94,97 @@
 
           <div class="primeiro-p-quem-somos">
             <p>
-              Com uma equipe de profissionais apaixonados pelo <em>corpo e movimento</em> nos especializamos na parte <em>acrobática</em>.
+              Com uma equipe de profissionais apaixonados pelo <em>corpo e movimento</em> nos especializamos na parte
+              <em>acrobática</em>.
             </p>
           </div>
 
           <div class="segundo-p-quem-somos">
             <p>
-              Voltados para facilitar a compreensão dos movimentos acrobáticos que surgiu a <strong>Simpliflic</strong>, uma empresa que acredita que as <em>acrobacias</em> não precisam ser, necessariamente, um bicho de sete cabeças.
+              Voltados para facilitar a compreensão dos movimentos acrobáticos que surgiu a <strong>Simpliflic</strong>,
+              uma empresa que acredita que as <em>acrobacias</em> não precisam ser, necessariamente, um bicho de sete
+              cabeças.
             </p>
           </div>
 
           <div class="terceiro-p-quem-somos">
             <p>
-              Tentaremos, ao máximo, facilitar sua jornada nesse novo mundo, com <em>exercícios personalizados</em> e ampla experiência dos nossos profissionais o aprendizado se torna mais simples e consistente. Venha conhecer um pouco mais como é essa nova percepção de mundo!
+              Tentaremos, ao máximo, facilitar sua jornada nesse novo mundo, com <em>exercícios personalizados</em> e
+              ampla experiência dos nossos profissionais o aprendizado se torna mais simples e consistente. Venha
+              conhecer um pouco mais como é essa nova percepção de mundo!
             </p>
           </div>
         </div>
 
 
-      </div>
 
-      <div>
-        <img src="src/imagens/Simpliflick [Tamanho original].pn" alt="Carrossel fotos" />
-        <img src="/src/imagens/pexels-olly-3763700.jp" alt="Carrossel fotos">
-        <img src="/src/imagens/pexels-tima-miroshnichenko-6572553 (1).jp" alt="Carrossel fotos">
-      </div>
+        <div class="carrossel">
 
-      <div id="sobre" class="secao cartao-info">
-        <h2>Sobre Nós</h2>
-        <div>
-          <div>
-            <p>
-              Somos uma equipe apaixonada pelo <em>corpo e movimento</em>, formada por Renan Chiarelli, profissional com mais de 20 anos de experiência em diferentes âmbitos da modalidade da <em>Ginástica Artística Masculina</em> dentre esses, sendo mais de 5 anos como professor da <em>Ginástica Artística Feminina</em>. Compondo uma base de experiência ampla e sólida para te ajudar a concluir seus objetivos com segurança, consciência e simplicidade.
-            </p>
+          <div class="img-carrossel">
+            <img src="src/imagens/Simpliflick [Tamanho original].png" alt="Carrossel fotos" />
+          </div>
+          <div class="img-carrossel">
+            <img src="/Simpliflic/src/imagens/pexels-olly-3763700.jpg" alt="Carrossel fotos">
+          </div>
+          <div class="img-carrossel">
+            <img src="/Simpliflic/src/imagens/pexels-tima-miroshnichenko-6572553 (1).jpg" alt="Carrossel fotos">
           </div>
         </div>
       </div>
 
-      <img src="Fotos equipe" alt="Fotos equipe">
-      <img src="Fotos equ" alt="Fotos equipe">
-      <img src="Fotos equipe" alt="Fotos equipe">
-
-      <div id="time" class="secao cartao-info cartao-time">
-        <h2>
-          A Equipe
-        </h2>
+      <div id="sobre" class="cartao-info">
         <div>
+          <h2>Sobre Nós</h2>
+        </div>
+
+        <div class="p-sobre-nos">
+          <p>
+            Somos uma equipe apaixonada pelo <em>corpo e movimento</em>, formada por Renan Chiarelli, profissional com
+            mais de 20 anos de experiência em diferentes âmbitos da modalidade da <em>Ginástica Artística
+              Masculina</em> dentre esses, sendo mais de 5 anos como professor da <em>Ginástica Artística
+              Feminina</em>. Compondo uma base de experiência ampla e sólida para te ajudar a concluir seus objetivos
+            com segurança, consciência e simplicidade.
+          </p>
+        </div>
+
+
+        <div class="img-equipe">
+
+          <img src="Fotos equipe" alt="Fotos equipe">
+          <img src="Fotos equ" alt="Fotos equipe">
+          <img src="Fotos equipe" alt="Fotos equipe">
+        </div>
+      </div>
+
+      <div id="time" class="cartao-time">
+        <div>
+          <h2>A Equipe</h2>
+        </div>
+
+
           <div>
             <h2>Conheça um pouco mais sobre os profissionais!</h2>
           </div>
-          <div>
+
+          <div class="profissional">
             <h3>Renan Chiarelli</h3>
+            
+            <img src="Foto profissional" alt="Foto perfil profissional">
           </div>
-          <img src="Foto profissional" alt="Foto perfil profissional">
-          <div>
+            
+          <div class="bio">
             <p>
-              Nascido em Brasília, no dia 25 de março, iniciou na <em>GAM</em> aos 4 anos de idade e seguiu no meio competitivo dos 6/7 anos até seus 17 anos. Nesse tempo participou de diversos campeonatos representando o seu clube, Setor Leste, juntando inúmeras conquistas pessoais e olhar crítico a detalhes que podem ajudar na compreensão de movimentos. Aos 18 anos começou a sua caminhada profissional na Universidade de Brasília - UnB, ainda com 18 anos aprofundou-se no mundo ginástico através de monitoria e aos 19 anos, com estágios acadêmicos formais. Seguindo até hoje envolvido nesse meio ginástico como treinador e árbitro.
+              Nascido em Brasília, no dia 25 de março, iniciou na <em>GAM</em> aos 4 anos de idade e seguiu no meio
+              competitivo dos 6/7 anos até seus 17 anos. Nesse tempo participou de diversos campeonatos representando o
+              seu clube, Setor Leste, juntando inúmeras conquistas pessoais e olhar crítico a detalhes que podem ajudar
+              na compreensão de movimentos. Aos 18 anos começou a sua caminhada profissional na Universidade de Brasília
+              - UnB, ainda com 18 anos aprofundou-se no mundo ginástico através de monitoria e aos 19 anos, com estágios
+              acadêmicos formais. Seguindo até hoje envolvido nesse meio ginástico como treinador e árbitro.
             </p>
           </div>
+
         </div>
 
-      </div>
       </div>
     </section>
 
@@ -185,7 +216,8 @@
             </div>
             <div>
               <p>
-                Nas nossas aulas kids nosso foco será trabalhar algumas capacidades físicas muito importantes para as <em>acrobacias</em>
+                Nas nossas aulas kids nosso foco será trabalhar algumas capacidades físicas muito importantes para as
+                <em>acrobacias</em>
               </p>
             </div>
           </div>
@@ -195,7 +227,8 @@
             </div>
             <div>
               <p>
-                Nas turmas teens aperfeiçoaremos algumas habilidades que eles já adquiriram e realizar um trabalho nas habilidades que possam ter sido deixadas de lado até o momento
+                Nas turmas teens aperfeiçoaremos algumas habilidades que eles já adquiriram e realizar um trabalho nas
+                habilidades que possam ter sido deixadas de lado até o momento
               </p>
             </div>
           </div>
@@ -205,7 +238,9 @@
             </div>
             <div>
               <p>
-                A <em>realização pessoal</em> com <strong><em>segurança</em></strong> se torna prioridade para os nossos adultos, tendo em vista uma vida inteira de hábitos e medos das <em>acrobacias</em> o trabalho vai ser de capacitação do corpo e da mente para que se abra um novo olhar das <em>acrobacias</em>
+                A <em>realização pessoal</em> com <strong><em>segurança</em></strong> se torna prioridade para os nossos
+                adultos, tendo em vista uma vida inteira de hábitos e medos das <em>acrobacias</em> o trabalho vai ser
+                de capacitação do corpo e da mente para que se abra um novo olhar das <em>acrobacias</em>
               </p>
             </div>
           </div>
@@ -215,7 +250,9 @@
             </div>
             <div>
               <p>
-                Pensando em alta performance foi pensado nosso programa performance, focando nos nossos atletas de forma específica nosso trabalho é aprimorar ao máximo as habilidades que aquele atleta vai necessitar para a competição em vista
+                Pensando em alta performance foi pensado nosso programa performance, focando nos nossos atletas de forma
+                específica nosso trabalho é aprimorar ao máximo as habilidades que aquele atleta vai necessitar para a
+                competição em vista
               </p>
             </div>
           </div>
@@ -225,7 +262,9 @@
             </div>
             <div>
               <p>
-                Existe uma habilidade que você queira muito melhorar, apenas por <em>realização pessoal</em>? Esse programa pode ser a sua solução, executando correções focadas para a solução dos maiores problemas em questão aqui a habilidade em questão adquiri outra consciência, permitindo a melhora exponencial
+                Existe uma habilidade que você queira muito melhorar, apenas por <em>realização pessoal</em>? Esse
+                programa pode ser a sua solução, executando correções focadas para a solução dos maiores problemas em
+                questão aqui a habilidade em questão adquiri outra consciência, permitindo a melhora exponencial
               </p>
             </div>
           </div>
@@ -241,7 +280,11 @@
             </div>
             <div>
               <p>
-                Feito para as crianças de 4 a 12 anos, subdividindo-se em Baby (4 - 6 anos), Kids 1 (7 - 9 anos), Kids 2 (10 - 12 anos). Focando em habilidades essenciais para os primeiros passos dessa jornada, entre elas a <strong><em>flexibilidade, força, consciência corporal, consciência espacial...e muitas outras</em></strong>. Com um ensino embasado na quebra do exercício principal em vários exercícios mais simples para melhorar o entendimento no decorrer dessa jornada
+                Feito para as crianças de 4 a 12 anos, subdividindo-se em Baby (4 - 6 anos), Kids 1 (7 - 9 anos), Kids 2
+                (10 - 12 anos). Focando em habilidades essenciais para os primeiros passos dessa jornada, entre elas a
+                <strong><em>flexibilidade, força, consciência corporal, consciência espacial...e muitas
+                    outras</em></strong>. Com um ensino embasado na quebra do exercício principal em vários exercícios
+                mais simples para melhorar o entendimento no decorrer dessa jornada
               </p>
             </div>
           </div>
@@ -251,7 +294,11 @@
             </div>
             <div>
               <p>
-                Pensado para os adolescentes de 13 a 16 anos, onde serão consideradas as habilidades adquiridas no decorrer da vida, onde será incentivado as habilidades aplicáveis às <em>acrobacias</em> e trabalhado para adquirir as habilidades necessárias para essa nova perspectiva de mundo. Com o mesmo princípio de quebrar o exercício principal em vários outros mais simples, os adolescentes terão dicas perspicazes dos profissionais que facilite a aquisição da <em>consciência corporal e espacial</em>
+                Pensado para os adolescentes de 13 a 16 anos, onde serão consideradas as habilidades adquiridas no
+                decorrer da vida, onde será incentivado as habilidades aplicáveis às <em>acrobacias</em> e trabalhado
+                para adquirir as habilidades necessárias para essa nova perspectiva de mundo. Com o mesmo princípio de
+                quebrar o exercício principal em vários outros mais simples, os adolescentes terão dicas perspicazes dos
+                profissionais que facilite a aquisição da <em>consciência corporal e espacial</em>
               </p>
             </div>
           </div>
@@ -261,7 +308,9 @@
             </div>
             <div>
               <p>
-                Pensado para o público acima de 17 anos, aqui preparamos exercícios simples para se aprender, mas desafiadores para trabalhar o psicológico e buscar novas perspectivas sobre o exercício em si, sempre focando na <strong><em>segurança</em></strong>
+                Pensado para o público acima de 17 anos, aqui preparamos exercícios simples para se aprender, mas
+                desafiadores para trabalhar o psicológico e buscar novas perspectivas sobre o exercício em si, sempre
+                focando na <strong><em>segurança</em></strong>
               </p>
             </div>
           </div>
@@ -271,7 +320,12 @@
             </div>
             <div>
               <p>
-                Feito para atletas de diversas faixas etárias, abrangendo atletas acima dos 7 anos de idade, sem idade máxima. Com o trabalho, preferencialmente, longo (acima dos 6 meses) os resultados tendem a ser melhores, porém restando dois meses para a data da competição você ainda consegue se inscrever no programa, lembrando que os resultados poderiam ter sido mais eficazes se tivesse um tempo hábil maior, com isso será montado um programa de treinamento voltado para o tempo restante até a competição, levando em consideração o regulamento a ser seguido e o que falta para cumprir ou tentar aperfeiçoar ao máximo
+                Feito para atletas de diversas faixas etárias, abrangendo atletas acima dos 7 anos de idade, sem idade
+                máxima. Com o trabalho, preferencialmente, longo (acima dos 6 meses) os resultados tendem a ser
+                melhores, porém restando dois meses para a data da competição você ainda consegue se inscrever no
+                programa, lembrando que os resultados poderiam ter sido mais eficazes se tivesse um tempo hábil maior,
+                com isso será montado um programa de treinamento voltado para o tempo restante até a competição, levando
+                em consideração o regulamento a ser seguido e o que falta para cumprir ou tentar aperfeiçoar ao máximo
               </p>
             </div>
           </div>
@@ -281,7 +335,10 @@
             </div>
             <div>
               <p>
-                Pensando em habilidades específicas que queira melhorar? Com esse programa atendemos indivíduos acima dos 12 anos que procuram cumprir uma <em>realização pessoal</em> através de algum exercício acrobático, com as dicas perspicazes dos profissionais seus olhos poderão enxergar o exercício de uma nova ótica, te entregando mais possibilidades de adequar sua técnica para que o objetivo final seja alcançado
+                Pensando em habilidades específicas que queira melhorar? Com esse programa atendemos indivíduos acima
+                dos 12 anos que procuram cumprir uma <em>realização pessoal</em> através de algum exercício acrobático,
+                com as dicas perspicazes dos profissionais seus olhos poderão enxergar o exercício de uma nova ótica, te
+                entregando mais possibilidades de adequar sua técnica para que o objetivo final seja alcançado
               </p>
             </div>
           </div>
